[OSJC-282] - Check Java9 compatibility
Signed-off-by: Jeff MAURY <jmaury@redhat.com>